# project/src/main/java/src/main/java/com/baitando/openapi/samples/gen/springbootserver/api/ControlApi.java
@@ -1,61 +1,0 @@
-/**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (5.3.0).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-package com.baitando.openapi.samples.gen.springbootserver.api;
-
-import com.baitando.openapi.samples.gen.springbootserver.model.ControlRequestDto;
-import com.baitando.openapi.samples.gen.springbootserver.model.ErrorDto;
-import io.swagger.annotations.*;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.*;
-import org.springframework.web.context.request.NativeWebRequest;
-import org.springframework.web.multipart.MultipartFile;
-
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-12-18T16:17:50.152839+09:00[Asia/Tokyo]")
-@Validated
-@Api(value = "control", description = "the control API")
-public interface ControlApi {
-
-    default Optional<NativeWebRequest> getRequest() {
-        return Optional.empty();
-    }
-
-    /**
-     * PUT /control
-     * hakoniwa simulation control.
-     *
-     * @param controlRequestDto  (optional)
-     * @return OK (status code 200)
-     *         or unexpected error (status code 200)
-     */
-    @ApiOperation(value = "", nickname = "controlSimulation", notes = "hakoniwa simulation control.", tags={  })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "OK"),
-        @ApiResponse(code = 200, message = "unexpected error", response = ErrorDto.class) })
-    @RequestMapping(
-        method = RequestMethod.PUT,
-        value = "/control",
-        produces = { "application/json" },
-        consumes = { "application/json" }
-    )
-    default ResponseEntity<Void> _controlSimulation(@ApiParam(value = "") @Valid @RequestBody(required = false) ControlRequestDto controlRequestDto) {
-        return controlSimulation(controlRequestDto);
-    }
-
-    // Override this method
-    default  ResponseEntity<Void> controlSimulation(ControlRequestDto controlRequestDto) {
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-
-    }
-
-}
