# project/src/main/java/src/main/java/com/baitando/openapi/samples/gen/springbootserver/api/StatusApi.java
@@ -1,67 +1,0 @@
-/**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (5.3.0).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-package com.baitando.openapi.samples.gen.springbootserver.api;
-
-import com.baitando.openapi.samples.gen.springbootserver.model.ErrorDto;
-import com.baitando.openapi.samples.gen.springbootserver.model.SimulationStatusDto;
-import io.swagger.annotations.*;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.*;
-import org.springframework.web.context.request.NativeWebRequest;
-import org.springframework.web.multipart.MultipartFile;
-
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-12-18T16:17:50.152839+09:00[Asia/Tokyo]")
-@Validated
-@Api(value = "status", description = "the status API")
-public interface StatusApi {
-
-    default Optional<NativeWebRequest> getRequest() {
-        return Optional.empty();
-    }
-
-    /**
-     * GET /status
-     *
-     * @return get hakoniwa simulation status (status code 200)
-     *         or unexpected error (status code 200)
-     */
-    @ApiOperation(value = "", nickname = "getSimStatus", notes = "", response = SimulationStatusDto.class, tags={  })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "get hakoniwa simulation status", response = SimulationStatusDto.class),
-        @ApiResponse(code = 200, message = "unexpected error", response = ErrorDto.class) })
-    @RequestMapping(
-        method = RequestMethod.GET,
-        value = "/status",
-        produces = { "application/json" }
-    )
-    default ResponseEntity<SimulationStatusDto> _getSimStatus() {
-        return getSimStatus();
-    }
-
-    // Override this method
-    default  ResponseEntity<SimulationStatusDto> getSimStatus() {
-        getRequest().ifPresent(request -> {
-            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
-                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"status\" : \"stopped\" }";
-                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
-                    break;
-                }
-            }
-        });
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-
-    }
-
-}
